# oscode

./: .gitignore  .gitmodules  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  README.rst  apt.txt  dense-rk.py  environment.yml  integrators.hpp  oxford-talk-2.ipynb  paper.bib  paper.md  plot-dense-output.py  plot.py  plots.ipynb  pyoscode_scipy.ipynb  pyproject.toml  requirements.txt  setup.py  solver.hpp  stepsize_control.ipynb  system.hpp  test-airy.cpp  test-airy.hpp  test.cpp  test.hpp  travis.yml  typedefs.hpp
.github/: pull_request_template.md
.github/workflows/: python-package.yml
JOSS-paper/: paper.bib  paper.md
examples/: CMakeLists.txt  Makefile  airy.cpp  airy.py  burst.cpp  ccm_pyoscode.ipynb  cosmology.ipynb  introduction_to_pyoscode.ipynb  plot_burst.py  pyoscode_scipy.ipynb  test-rk.py  vdp.cpp  vdp_PI_control.txt  vdp_classic_control.txt
examples/images/: bingo-singlek-k1e-5-ref.txt  singlek-kd-bd-2a.txt  singlek-kd-bg-2a-ref.txt
images/: bingo-singlek-k1e-5.txt  rkwkb-single-k1e-5.txt
include/: burst.cpp  integrators.hpp  interpolator.hpp  output.txt  rksolver.hpp  solver.hpp  system.hpp  wkbsolver.hpp
include/oscode/: interpolator.hpp  rksolver.hpp  solver.hpp  system.hpp  wkbsolver.hpp
numerical_ds/: cSum.pyx  solver.py  test-airy.py  test-burst.py  test-ms.py  test-pps.py  test-step.py  test.py  unit_tests.py
numerical_ds/include/: Makefile  _de_system.cpp  _solver.cpp  bingo-pps.cpp  bingo-singlek.cpp  interpolator.hpp  kd-closed-ctspps.cpp  kd-closed-pps.cpp  kd-closed-singlek.cpp  kd-pps.cpp  kd-singlek.cpp  ms-solver-pps.cpp  ms-solver-singlek.cpp  plotting.py  rksolver.hpp  schrodinger-solver.cpp  schrodinger.py  setup.py  solver.cpp  solver.hpp  system.hpp  typedefs.hpp  wkbsolver.hpp
outputs/: output.txt
pyoscode/: __init__.py  _pyoscode.cpp  _pyoscode.hpp  _solver.cpp  setup.py
pyoscode/docs/: conf.py  index.rst  requirements.txt
pyoscode/docs/source/: conf.py  index.rst  intro.rst  introduction.rst  oscode.rst  pyoscode.rst
test/: Makefile  test-airy.cpp  test-airy.hpp  test-ms.cpp  test-ms.hpp  test-pps.cpp  test-pps.hpp  time_airy.cpp
tests/: CMakeLists.txt  aries_test.cpp  burst_test.cpp  test_airy.py  test_arrays.py
